--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -13,12 +13,13 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/fluent-ffmpeg": "^2.1.26",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.7.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "express": "^4.21.0",
+    "@google-cloud/storage": "^7.13.0",
+    "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3"
   }
 }
